--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/m-mdy-m/tel-bot/issues"
   },
-  "homepage": "https://github.com/m-mdy-m/tel-bot#readme"
+  "homepage": "https://github.com/m-mdy-m/tel-bot#readme",
+  "dependencies": {
+    "axios": "^1.7.2",
+    "express": "^4.19.2",
+    "telegraf": "^4.16.3"
+  }
 }
