--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
-    "telegraf": "^4.16.3"
+    "node-telegram-bot-api": "^0.63.0"
   }
 }
