--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
-  "name": "cmgcbot",
+  "name": "cmcop",
   "version": "1.0.0",
   "description": "A Telegram bot for managing Telegram groups",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --config .mochar.json",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/m-mdy-m/CMGCBOT.git"
+    "url": "git+https://github.com/m-mdy-m/CMCOP.git"
   },
   "keywords": [
-    "CMGCBOT",
+    "CMCOP",
     "telegram-bot"
   ],
   "author": "mahdi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/m-mdy-m/CMGCBOT/issues"
+    "url": "https://github.com/m-mdy-m/CMCOP/issues"
   },
-  "homepage": "https://github.com/m-mdy-m/CMGCBOT#readme",
+  "homepage": "https://github.com/m-mdy-m/CMCOP#readme",
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
-    "node-telegram-bot-api": "^0.63.0"
+    "telegraf": "^4.16.3"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.16",
+    "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.7",
+    "@types/supertest": "^6.0.2",
+    "chai": "^5.1.1",
+    "mocha": "^10.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
