--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha --config .mochar.json",
-    "start": "node src/app.js"
+    "start": "node -r ts-node/register --env-file=.env src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
-    "telegraf": "^4.16.3"
+    "grammy": "^1.27.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.16",
