--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "express": "^4.19.2",
-    "grammy": "^1.27.0"
+    "grammy": "^1.27.0",
+    "mysql2": "^3.11.0",
+    "redis": "^4.7.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/chai": "^4.3.16",
