--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
     "target": "es2016",
     "module": "commonjs",
     "resolveJsonModule": true,
-    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true
   },
