chore: Updated package.json to include 'build' script, modified src/app.ts to fix indentation and formatting, and updated tsconfig.json to target es2020 and include outDir and sourceMap options.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Telegram bot for managing Telegram groups",
   "main": "app.js",
   "scripts": {
+    "build":"tsc",
     "test": "mocha --config .mochar.json",
     "start": "node -r ts-node/register --env-file=.env src/app.ts"
   },
