feat(config): add dynamic database configuration for production and development environments
- Define and type entities array with EntityType.
- Create a config object to handle both production and development environment configurations.
- Implement getAppDataSourceConfig to return the appropriate configuration based on the current NODE_ENV.
- Ensure entities are correctly typed and utilized within the configuration object.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test": "mocha --config .mochar.json",
     "clean": "rm -rf dist",
     "main": "node dist/app.js",
-    "start": "node -r ts-node/register --env-file=.env src/app.ts",
-    "start:deploy": "node -r ts-node/register src/app.ts"
+    "start": "NODE_ENV=development node -r ts-node/register --env-file=.env src/app.ts",
+    "start:deploy": "NODE_ENV=production node -r ts-node/register src/app.ts"
   },
   "repository": {
     "type": "git",
