chore: update bot info and configuration and add load env file with --env flag
- Updated the bot version to 4.0.0 in docs/BotInfo.json
- Added new bot status and description in docs/BotInfo.json
- Included additional supported languages (en, fa) in the bot info
- Added support contact information and support groups for user assistance
- Configured Prettier settings for consistent code formatting

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "tsc",
     "test": "mocha --config .mochar.json",
     "clean": "rm -rf dist",
-    "main": "npm run build & node dist/app.js",
+    "main": "npm run build & node --env-file=.env dist/app.js",
     "start": "NODE_ENV=development node -r ts-node/register --env-file=.env src/app.ts",
     "start:deploy": "NODE_ENV=production node -r ts-node/register src/app.ts"
   },
