--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,14 @@ services:
     restart: unless-stopped
 
   db:
-    image: mariadb:10.5
+    image: postgres:16 
     container_name: cop-db
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_PASSWORD: ${DB_PASSWORD} 
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER} 
     volumes:
-      - db-data:/var/lib/mysql
+      - db-data:/var/lib/postgresql/data 
     networks:
       - cop-net
     restart: unless-stopped
