feat(webhook-service): implement WebHookService for managing bot webhooks
- Added WebHookService class to manage Telegram bot webhook setup, handling, and removal.
- Integrated Express server to handle incoming webhook requests from Telegram.
- Included methods to start the server, set up the webhook, and remove the webhook.
- Ensured proper error handling and response to webhook requests.

--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
   "homepage": "https://github.com/CodeModule-ir/cop#readme",
   "dependencies": {
     "@medishn/gland-logger": "^1.0.5",
+    "express": "^4.21.1",
     "grammy": "^1.27.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
