--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "docker:down": "docker-compose down",
     "docker:build": "docker-compose build",
     "docker:run": "docker-compose up",
-    "docker:start": "docker-compose up --build",
+    "docker:start": "docker-compose up --build -d",
+    "docker:start:all": "npm run docker:build && npm run docker:start",
     "build": "tsc",
     "test": "mocha --config .mochar.json",
     "clean": "rm -rf dist",
