chore(docker): update docker-compose and package.json files with new network driver and modified script commands

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   ],
   "scripts": {
     "docker:stop": "docker-compose stop",
-    "docker:down": "docker-compose down",
-    "docker:build": "docker-compose build",
-    "docker:run": "docker-compose up",
+    "docker:down": "docker-compose down --volumes --remove-orphans",
+    "docker:build": "docker-compose build --no-cache",
+    "docker:run": "docker-compose up --build",
     "docker:start": "docker-compose up --build -d",
-    "docker:start:all": "npm run docker:build && npm run docker:start",
+    "docker:logs": "docker-compose logs -f",
+    "docker:restart:all": "npm run docker:down && npm run docker:start",
+    "docker:prune": "docker system prune --volumes --force",
     "build": "tsc",
     "test": "mocha --config .mochar.json",
     "clean": "rm -rf dist",
