--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "main": "npm run build && node --env-file=.env dist/app.js",
-    "start:production": "NODE_ENV=production node --trace-uncaught -r ts-node/register --env-file=.env src/app.ts",
+    "start:production": "NODE_ENV=production node --trace-uncaught -r ts-node/register src/app.ts",
     "start": "NODE_ENV=development node --trace-uncaught -r ts-node/register --env-file=.env src/app.ts",
     "start:deploy": "npm run start:production"
   },
@@ -48,7 +48,7 @@
   },
   "homepage": "https://github.com/CodeModule-ir/cop#readme",
   "dependencies": {
-    "@medishn/logger": "^2.0.1",
+    "@medishn/logger": "^2.0.0",
     "express": "^4.21.1",
     "grammy": "^1.27.0",
     "pg": "^8.13.1"
