feat: Update dependencies and add rate limiting to bot`
diff` contains changes to `package-lock.json, package.json`, `src/bot/index.ts, src/decorators/Context.ts, and src/utils/RateLimiter.ts

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "homepage": "https://github.com/CodeModule-ir/cop#readme",
   "dependencies": {
+    "@grammyjs/ratelimiter": "^1.2.1",
     "@medishn/logger": "^2.0.0",
     "express": "^4.21.1",
     "grammy": "^1.27.0",
